// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`view should be possible to get a initial rendering of the model 1`] = `
"
<div class=\\"w3-medium\\">
    
            <div class=\\"w3-display-container\\">
                <img src=\\"montecarlo.jpg\\" class=\\"w3-image\\">
                    <h1
                        class=\\"w3-display-topleft w3-container w3-text-my-orange\\"
                        style=\\"text-shadow:1px 1px 0 #000\\">
                        <b>MONTE CARLO SIMULATION</b>
                    </h1>
             </div>
        <div class=\\"w3-display-container w3-row\\">
            </div>
            <div class=\\"w3-cell-row\\">
                <div class=\\"w3-cell w3-padding w3-mobile\\" style=\\"width:50%\\"\\">
                
            <h2>Througput the Last 6 Iterations</h2>
            <p>The table below shows the velocity of the team for the last 6 iterations</p>
            <table class=\\"w3-table w3-centered\\">
                <thead>
                    <tr class=\\"w3-my-orange w3-text-my-black\\">
                        
                                <th>
                                    <img
                                        src=\\"die1.svg\\"
                                        height=\\"24px\\"
                                        width=\\"24px\\" />
                                    <br/>
                                    Iteration 1
                                </th>
                                <th>
                                    <img
                                        src=\\"die2.svg\\"
                                        height=\\"24px\\"
                                        width=\\"24px\\" />
                                    <br/>
                                    Iteration 2
                                </th>
                                <th>
                                    <img
                                        src=\\"die3.svg\\"
                                        height=\\"24px\\"
                                        width=\\"24px\\" />
                                    <br/>
                                    Iteration 3
                                </th>
                                <th>
                                    <img
                                        src=\\"die4.svg\\"
                                        height=\\"24px\\"
                                        width=\\"24px\\" />
                                    <br/>
                                    Iteration 4
                                </th>
                                <th>
                                    <img
                                        src=\\"die5.svg\\"
                                        height=\\"24px\\"
                                        width=\\"24px\\" />
                                    <br/>
                                    Iteration 5
                                </th>
                                <th>
                                    <img
                                        src=\\"die6.svg\\"
                                        height=\\"24px\\"
                                        width=\\"24px\\" />
                                    <br/>
                                    Iteration 6
                                </th>
                    </tr>
                </thead>
                <tbody>
                    <tr class=\\"w3-my-black\\">
                        
<td>5</td>
<td>7</td>
<td>5</td>
<td>8</td>
<td>12</td>
<td>10</td>
                    </tr>
                </tbody>
            </table>
                
            <h2>Create Simulation Data</h2>
                <p>
                    <b>Remaining Stories: </b>
                    <input
                        type=\\"text\\"
                        name=\\"stories\\"
                        value=\\"100\\"
                        class=\\"w3-my-black w3-border-white w3-center\\"
                        style=\\"display: inline-block\\"
                        onchange=\\"send({subject: 'stories', action: 'edit', data: this.value})\\">
                </p>
                <p>The table below shows the six volocities building the next sample</p>
                <table class=\\"w3-table w3-centered\\">
                    <thead>
                        <tr class=\\"w3-my-orange w3-text-my-black w3-center\\">
                            <th>Iteration 1</th>
<th>Iteration 2</th>
<th>Iteration 3</th>
<th>Iteration 4</th>
<th>Iteration 5</th>
<th>Iteration 6</th>

                        </tr>
                    </thead>
                    <tbody>
                        <tr class=\\"w3-my-black\\">
                            
                                    <td class=\\"w3-center\\">
                                        <div class=\\"w3-dropdown-hover w3-my-black\\">
        <button class=\\"w3-button\\">
            <img
                src=\\"die1.svg\\"
                height=\\"24px\\"
                width=\\"24px\\" />
        </button>
        <br/>
        5
        <div class=\\"w3-dropdown-content w3-bar-block w3-card-4\\" style=\\"left:0\\">
            <button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field01',
        action: 'edit',
        data: '0',
    })\\">
    <img
        src=\\"die1.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field01',
        action: 'edit',
        data: '1',
    })\\">
    <img
        src=\\"die2.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    7
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field01',
        action: 'edit',
        data: '2',
    })\\">
    <img
        src=\\"die3.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field01',
        action: 'edit',
        data: '3',
    })\\">
    <img
        src=\\"die4.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    8
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field01',
        action: 'edit',
        data: '4',
    })\\">
    <img
        src=\\"die5.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    12
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field01',
        action: 'edit',
        data: '5',
    })\\">
    <img
        src=\\"die6.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    10
</button>

        </div>
    </div>
    
                                    </td>
                                    <td class=\\"w3-center\\">
                                        <div class=\\"w3-dropdown-hover w3-my-black\\">
        <button class=\\"w3-button\\">
            <img
                src=\\"die1.svg\\"
                height=\\"24px\\"
                width=\\"24px\\" />
        </button>
        <br/>
        5
        <div class=\\"w3-dropdown-content w3-bar-block w3-card-4\\" style=\\"left:0\\">
            <button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field02',
        action: 'edit',
        data: '0',
    })\\">
    <img
        src=\\"die1.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field02',
        action: 'edit',
        data: '1',
    })\\">
    <img
        src=\\"die2.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    7
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field02',
        action: 'edit',
        data: '2',
    })\\">
    <img
        src=\\"die3.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field02',
        action: 'edit',
        data: '3',
    })\\">
    <img
        src=\\"die4.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    8
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field02',
        action: 'edit',
        data: '4',
    })\\">
    <img
        src=\\"die5.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    12
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field02',
        action: 'edit',
        data: '5',
    })\\">
    <img
        src=\\"die6.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    10
</button>

        </div>
    </div>
    
                                    </td>
                                    <td class=\\"w3-center\\">
                                        <div class=\\"w3-dropdown-hover w3-my-black\\">
        <button class=\\"w3-button\\">
            <img
                src=\\"die1.svg\\"
                height=\\"24px\\"
                width=\\"24px\\" />
        </button>
        <br/>
        5
        <div class=\\"w3-dropdown-content w3-bar-block w3-card-4\\" style=\\"left:0\\">
            <button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field03',
        action: 'edit',
        data: '0',
    })\\">
    <img
        src=\\"die1.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field03',
        action: 'edit',
        data: '1',
    })\\">
    <img
        src=\\"die2.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    7
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field03',
        action: 'edit',
        data: '2',
    })\\">
    <img
        src=\\"die3.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field03',
        action: 'edit',
        data: '3',
    })\\">
    <img
        src=\\"die4.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    8
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field03',
        action: 'edit',
        data: '4',
    })\\">
    <img
        src=\\"die5.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    12
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field03',
        action: 'edit',
        data: '5',
    })\\">
    <img
        src=\\"die6.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    10
</button>

        </div>
    </div>
    
                                    </td>
                                    <td class=\\"w3-center\\">
                                        <div class=\\"w3-dropdown-hover w3-my-black\\">
        <button class=\\"w3-button\\">
            <img
                src=\\"die1.svg\\"
                height=\\"24px\\"
                width=\\"24px\\" />
        </button>
        <br/>
        5
        <div class=\\"w3-dropdown-content w3-bar-block w3-card-4\\" style=\\"left:0\\">
            <button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field04',
        action: 'edit',
        data: '0',
    })\\">
    <img
        src=\\"die1.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field04',
        action: 'edit',
        data: '1',
    })\\">
    <img
        src=\\"die2.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    7
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field04',
        action: 'edit',
        data: '2',
    })\\">
    <img
        src=\\"die3.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field04',
        action: 'edit',
        data: '3',
    })\\">
    <img
        src=\\"die4.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    8
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field04',
        action: 'edit',
        data: '4',
    })\\">
    <img
        src=\\"die5.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    12
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field04',
        action: 'edit',
        data: '5',
    })\\">
    <img
        src=\\"die6.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    10
</button>

        </div>
    </div>
    
                                    </td>
                                    <td class=\\"w3-center\\">
                                        <div class=\\"w3-dropdown-hover w3-my-black\\">
        <button class=\\"w3-button\\">
            <img
                src=\\"die1.svg\\"
                height=\\"24px\\"
                width=\\"24px\\" />
        </button>
        <br/>
        5
        <div class=\\"w3-dropdown-content w3-bar-block w3-card-4\\" style=\\"left:0\\">
            <button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field05',
        action: 'edit',
        data: '0',
    })\\">
    <img
        src=\\"die1.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field05',
        action: 'edit',
        data: '1',
    })\\">
    <img
        src=\\"die2.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    7
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field05',
        action: 'edit',
        data: '2',
    })\\">
    <img
        src=\\"die3.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field05',
        action: 'edit',
        data: '3',
    })\\">
    <img
        src=\\"die4.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    8
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field05',
        action: 'edit',
        data: '4',
    })\\">
    <img
        src=\\"die5.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    12
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field05',
        action: 'edit',
        data: '5',
    })\\">
    <img
        src=\\"die6.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    10
</button>

        </div>
    </div>
    
                                    </td>
                                    <td class=\\"w3-center\\">
                                        <div class=\\"w3-dropdown-hover w3-my-black\\">
        <button class=\\"w3-button\\">
            <img
                src=\\"die1.svg\\"
                height=\\"24px\\"
                width=\\"24px\\" />
        </button>
        <br/>
        5
        <div class=\\"w3-dropdown-content w3-bar-block w3-card-4\\" style=\\"right:0\\">
            <button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field06',
        action: 'edit',
        data: '0',
    })\\">
    <img
        src=\\"die1.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field06',
        action: 'edit',
        data: '1',
    })\\">
    <img
        src=\\"die2.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    7
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field06',
        action: 'edit',
        data: '2',
    })\\">
    <img
        src=\\"die3.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field06',
        action: 'edit',
        data: '3',
    })\\">
    <img
        src=\\"die4.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    8
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field06',
        action: 'edit',
        data: '4',
    })\\">
    <img
        src=\\"die5.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    12
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field06',
        action: 'edit',
        data: '5',
    })\\">
    <img
        src=\\"die6.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    10
</button>

        </div>
    </div>
    
                                    </td>
                        </tr>
                    </tbody>
                </table>
                <br/>
                <div class=\\"w3-row\\">
                    <button
    class=\\"w3-button w3-ripple w3-white w3-col\\"
    style=\\"width:22%\\"
    onclick=\\"send({
      subject: 'add',
      action: 'click',
      data: '0'
    })\\">
    Add
</button>

                    <div class=\\"w3-col\\" style=\\"width:4%\\">&nbsp</div>
                    <button
    class=\\"w3-button w3-ripple w3-white w3-col\\"
    style=\\"width:22%\\"
    onclick=\\"send({
      subject: 'generate',
      action: 'click',
      data: '0'
    })\\">
    Roll Dice
</button>

                    <div class=\\"w3-col\\" style=\\"width:4%\\">&nbsp</div>
                    <button
    class=\\"w3-button w3-ripple w3-white w3-col\\"
    style=\\"width:22%\\"
    onclick=\\"send({
      subject: 'generate100',
      action: 'click',
      data: '0'
    })\\">
    Generate & Add 100
</button>

                    <div class=\\"w3-col\\" style=\\"width:4%\\">&nbsp</div>
                    <button
    class=\\"w3-button w3-ripple w3-white w3-col\\"
    style=\\"width:22%\\"
    onclick=\\"send({
      subject: 'reset',
      action: 'click',
      data: '0'
    })\\">
    Reset
</button>

                </div>
                <br /><img src=\\"logo.gif\\" width=\\"100\\">
            </div>
            <div class=\\"w3-cell w3-padding w3-mobile\\" style=\\"width:50%\\">
                
                
            </div>
    </div>
</div>"
`;

exports[`view should be possible to get a view with descriptions 1`] = `
"
<div class=\\"w3-medium\\">
    
            <div class=\\"w3-display-container\\">
                <img src=\\"montecarlo.jpg\\" class=\\"w3-image\\">
                    <h1
                        class=\\"w3-display-topleft w3-container w3-text-my-orange\\"
                        style=\\"text-shadow:1px 1px 0 #000\\">
                        <b>MONTE CARLO SIMULATION</b>
                    </h1>
             </div>
        <div class=\\"w3-display-container w3-row\\">
            </div>
            <div class=\\"w3-cell-row\\">
                <div class=\\"w3-cell w3-padding w3-mobile\\" style=\\"width:50%\\"\\">
                
            <h2>Througput the Last 6 Iterations</h2>
            <p>The table below shows the velocity of the team for the last 6 iterations</p>
            <table class=\\"w3-table w3-centered\\">
                <thead>
                    <tr class=\\"w3-my-orange w3-text-my-black\\">
                        
                                <th>
                                    <img
                                        src=\\"die1.svg\\"
                                        height=\\"24px\\"
                                        width=\\"24px\\" />
                                    <br/>
                                    Iteration 1
                                </th>
                                <th>
                                    <img
                                        src=\\"die2.svg\\"
                                        height=\\"24px\\"
                                        width=\\"24px\\" />
                                    <br/>
                                    Iteration 2
                                </th>
                                <th>
                                    <img
                                        src=\\"die3.svg\\"
                                        height=\\"24px\\"
                                        width=\\"24px\\" />
                                    <br/>
                                    Iteration 3
                                </th>
                                <th>
                                    <img
                                        src=\\"die4.svg\\"
                                        height=\\"24px\\"
                                        width=\\"24px\\" />
                                    <br/>
                                    Iteration 4
                                </th>
                                <th>
                                    <img
                                        src=\\"die5.svg\\"
                                        height=\\"24px\\"
                                        width=\\"24px\\" />
                                    <br/>
                                    Iteration 5
                                </th>
                                <th>
                                    <img
                                        src=\\"die6.svg\\"
                                        height=\\"24px\\"
                                        width=\\"24px\\" />
                                    <br/>
                                    Iteration 6
                                </th>
                    </tr>
                </thead>
                <tbody>
                    <tr class=\\"w3-my-black\\">
                        
<td>5</td>
<td>7</td>
<td>5</td>
<td>8</td>
<td>12</td>
<td>10</td>
                    </tr>
                </tbody>
            </table>
                
            <h2>Create Simulation Data</h2>
                <p>
                    <b>Remaining Stories: </b>
                    <input
                        type=\\"text\\"
                        name=\\"stories\\"
                        value=\\"100\\"
                        class=\\"w3-my-black w3-border-white w3-center\\"
                        style=\\"display: inline-block\\"
                        onchange=\\"send({subject: 'stories', action: 'edit', data: this.value})\\">
                </p>
                <p>The table below shows the six volocities building the next sample</p>
                <table class=\\"w3-table w3-centered\\">
                    <thead>
                        <tr class=\\"w3-my-orange w3-text-my-black w3-center\\">
                            <th>Iteration 1</th>
<th>Iteration 2</th>
<th>Iteration 3</th>
<th>Iteration 4</th>
<th>Iteration 5</th>
<th>Iteration 6</th>

                        </tr>
                    </thead>
                    <tbody>
                        <tr class=\\"w3-my-black\\">
                            
                                    <td class=\\"w3-center\\">
                                        <div class=\\"w3-dropdown-hover w3-my-black\\">
        <button class=\\"w3-button\\">
            <img
                src=\\"die1.svg\\"
                height=\\"24px\\"
                width=\\"24px\\" />
        </button>
        <br/>
        5
        <div class=\\"w3-dropdown-content w3-bar-block w3-card-4\\" style=\\"left:0\\">
            <button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field01',
        action: 'edit',
        data: '0',
    })\\">
    <img
        src=\\"die1.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field01',
        action: 'edit',
        data: '1',
    })\\">
    <img
        src=\\"die2.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    7
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field01',
        action: 'edit',
        data: '2',
    })\\">
    <img
        src=\\"die3.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field01',
        action: 'edit',
        data: '3',
    })\\">
    <img
        src=\\"die4.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    8
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field01',
        action: 'edit',
        data: '4',
    })\\">
    <img
        src=\\"die5.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    12
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field01',
        action: 'edit',
        data: '5',
    })\\">
    <img
        src=\\"die6.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    10
</button>

        </div>
    </div>
    
                                    </td>
                                    <td class=\\"w3-center\\">
                                        <div class=\\"w3-dropdown-hover w3-my-black\\">
        <button class=\\"w3-button\\">
            <img
                src=\\"die1.svg\\"
                height=\\"24px\\"
                width=\\"24px\\" />
        </button>
        <br/>
        5
        <div class=\\"w3-dropdown-content w3-bar-block w3-card-4\\" style=\\"left:0\\">
            <button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field02',
        action: 'edit',
        data: '0',
    })\\">
    <img
        src=\\"die1.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field02',
        action: 'edit',
        data: '1',
    })\\">
    <img
        src=\\"die2.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    7
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field02',
        action: 'edit',
        data: '2',
    })\\">
    <img
        src=\\"die3.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field02',
        action: 'edit',
        data: '3',
    })\\">
    <img
        src=\\"die4.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    8
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field02',
        action: 'edit',
        data: '4',
    })\\">
    <img
        src=\\"die5.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    12
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field02',
        action: 'edit',
        data: '5',
    })\\">
    <img
        src=\\"die6.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    10
</button>

        </div>
    </div>
    
                                    </td>
                                    <td class=\\"w3-center\\">
                                        <div class=\\"w3-dropdown-hover w3-my-black\\">
        <button class=\\"w3-button\\">
            <img
                src=\\"die1.svg\\"
                height=\\"24px\\"
                width=\\"24px\\" />
        </button>
        <br/>
        5
        <div class=\\"w3-dropdown-content w3-bar-block w3-card-4\\" style=\\"left:0\\">
            <button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field03',
        action: 'edit',
        data: '0',
    })\\">
    <img
        src=\\"die1.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field03',
        action: 'edit',
        data: '1',
    })\\">
    <img
        src=\\"die2.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    7
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field03',
        action: 'edit',
        data: '2',
    })\\">
    <img
        src=\\"die3.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field03',
        action: 'edit',
        data: '3',
    })\\">
    <img
        src=\\"die4.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    8
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field03',
        action: 'edit',
        data: '4',
    })\\">
    <img
        src=\\"die5.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    12
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field03',
        action: 'edit',
        data: '5',
    })\\">
    <img
        src=\\"die6.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    10
</button>

        </div>
    </div>
    
                                    </td>
                                    <td class=\\"w3-center\\">
                                        <div class=\\"w3-dropdown-hover w3-my-black\\">
        <button class=\\"w3-button\\">
            <img
                src=\\"die1.svg\\"
                height=\\"24px\\"
                width=\\"24px\\" />
        </button>
        <br/>
        5
        <div class=\\"w3-dropdown-content w3-bar-block w3-card-4\\" style=\\"left:0\\">
            <button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field04',
        action: 'edit',
        data: '0',
    })\\">
    <img
        src=\\"die1.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field04',
        action: 'edit',
        data: '1',
    })\\">
    <img
        src=\\"die2.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    7
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field04',
        action: 'edit',
        data: '2',
    })\\">
    <img
        src=\\"die3.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field04',
        action: 'edit',
        data: '3',
    })\\">
    <img
        src=\\"die4.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    8
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field04',
        action: 'edit',
        data: '4',
    })\\">
    <img
        src=\\"die5.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    12
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field04',
        action: 'edit',
        data: '5',
    })\\">
    <img
        src=\\"die6.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    10
</button>

        </div>
    </div>
    
                                    </td>
                                    <td class=\\"w3-center\\">
                                        <div class=\\"w3-dropdown-hover w3-my-black\\">
        <button class=\\"w3-button\\">
            <img
                src=\\"die1.svg\\"
                height=\\"24px\\"
                width=\\"24px\\" />
        </button>
        <br/>
        5
        <div class=\\"w3-dropdown-content w3-bar-block w3-card-4\\" style=\\"left:0\\">
            <button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field05',
        action: 'edit',
        data: '0',
    })\\">
    <img
        src=\\"die1.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field05',
        action: 'edit',
        data: '1',
    })\\">
    <img
        src=\\"die2.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    7
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field05',
        action: 'edit',
        data: '2',
    })\\">
    <img
        src=\\"die3.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field05',
        action: 'edit',
        data: '3',
    })\\">
    <img
        src=\\"die4.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    8
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field05',
        action: 'edit',
        data: '4',
    })\\">
    <img
        src=\\"die5.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    12
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field05',
        action: 'edit',
        data: '5',
    })\\">
    <img
        src=\\"die6.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    10
</button>

        </div>
    </div>
    
                                    </td>
                                    <td class=\\"w3-center\\">
                                        <div class=\\"w3-dropdown-hover w3-my-black\\">
        <button class=\\"w3-button\\">
            <img
                src=\\"die1.svg\\"
                height=\\"24px\\"
                width=\\"24px\\" />
        </button>
        <br/>
        5
        <div class=\\"w3-dropdown-content w3-bar-block w3-card-4\\" style=\\"right:0\\">
            <button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field06',
        action: 'edit',
        data: '0',
    })\\">
    <img
        src=\\"die1.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field06',
        action: 'edit',
        data: '1',
    })\\">
    <img
        src=\\"die2.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    7
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field06',
        action: 'edit',
        data: '2',
    })\\">
    <img
        src=\\"die3.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    5
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field06',
        action: 'edit',
        data: '3',
    })\\">
    <img
        src=\\"die4.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    8
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field06',
        action: 'edit',
        data: '4',
    })\\">
    <img
        src=\\"die5.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    12
</button>
<button
    class=\\"w3-button\\"
    onclick=\\"send({
        subject: 'field06',
        action: 'edit',
        data: '5',
    })\\">
    <img
        src=\\"die6.svg\\"
        height=\\"24px\\"
        width=\\"24px\\" />
    10
</button>

        </div>
    </div>
    
                                    </td>
                        </tr>
                    </tbody>
                </table>
                <br/>
                <div class=\\"w3-row\\">
                    <button
    class=\\"w3-button w3-ripple w3-white w3-col\\"
    style=\\"width:22%\\"
    onclick=\\"send({
      subject: 'add',
      action: 'click',
      data: '0'
    })\\">
    Add
</button>

                    <div class=\\"w3-col\\" style=\\"width:4%\\">&nbsp</div>
                    <button
    class=\\"w3-button w3-ripple w3-white w3-col\\"
    style=\\"width:22%\\"
    onclick=\\"send({
      subject: 'generate',
      action: 'click',
      data: '0'
    })\\">
    Roll Dice
</button>

                    <div class=\\"w3-col\\" style=\\"width:4%\\">&nbsp</div>
                    <button
    class=\\"w3-button w3-ripple w3-white w3-col\\"
    style=\\"width:22%\\"
    onclick=\\"send({
      subject: 'generate100',
      action: 'click',
      data: '0'
    })\\">
    Generate & Add 100
</button>

                    <div class=\\"w3-col\\" style=\\"width:4%\\">&nbsp</div>
                    <button
    class=\\"w3-button w3-ripple w3-white w3-col\\"
    style=\\"width:22%\\"
    onclick=\\"send({
      subject: 'reset',
      action: 'click',
      data: '0'
    })\\">
    Reset
</button>

                </div>
                <br /><img src=\\"logo.gif\\" width=\\"100\\">
            </div>
            <div class=\\"w3-cell w3-padding w3-mobile\\" style=\\"width:50%\\">
                
            <h2>Description</h2>
            <p>
                The purpose of this application is to build understanding of how <b>Monte Carlo Simulation</b>
                works. To accomplish this a short description of the method and a short introduction to the
                scenario used in the application follows.
            </p>
            <p>
                <b>Monte Carlo Simulation</b> is a statistical method that, in this context, makes a
                forecast of how many more iterations we need to be able to close the remaning stories in the scope,
                based upon how much was delivered in the past. The forecast is built from a large number of
                samples generated as combinations of velocities from the previous iterations.
            </p>
            <div class=\\"w3-card w3-my-orange w3-text-black w3-round w3-margin w3-padding\\">
                <p>
                    <b>Exercise Introduction</b> -
                    The first table shows the velocity of the teams for the last six iterations
                    and we have 100 stories remaning. When can they be delivered?
                    We use six iterations because a dice have six sides.
                    In real life it may be sufficient with data from three or four iterations.
                </p>
                <ol>
                    <li>Role six dice (one for each column in the <i>Create Simulation Data</i> section)</li>
                    <li>
                        For each dice update the velocity that corresponds to number on the dice<br/>
                        (e.g. Dice with number two yields a velocity of seven)
                    </li>
                    <li>Press <i>Add</i> when all 6 velocities are entered.
                </ol>
                <p>
                    Continue as long as it makes sense and then you can use the
                    <i>Roll Dice</i> button to get more samples faster.
                </p>
            </div>
            <p>
                Data calculated will be shown as a chart and in a table. In the table you can follow the calculations.
                The last sample is in the top of the table. For each sample the average velocity is calculated and this
                is used to get the remaining number of iterations to close the remaining stories
                (100 / average velocity).
            </p>
                
            </div>
    </div>
</div>"
`;
